k8s/summarize.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pysummarize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pysummarize
    type: Recreate
  template:
    metadata:
      labels:
        app: pysummarize
    spec:
      containers:
        - name: pysummarize
          image: docker.io/domenicopiol/pysummarize:latest
          imagePullPolicy: Always
          environment:
            MODEL_LOCATION: '/opt/bart-large-cnn'
          ports:
            - containerPort: 5443
          volumeMounts:
            - name: modeldir
              mountPath: /opt/bart-large-cnn
      volumes:
        - name: modeldir
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pysummarize-service
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 5443
  selector:
    app: pysummarize
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pysummarize-route
spec:
  port:
    targetPort: 5443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  to:
    kind: Service
    name: pysummarize-service
    weight: 100
